OVAS/Islender - Jhoan/mini_compiler/examples/semantic_errors/undeclared_variable.mc
// Error: variable no declarada
print(y);
